--- a/frontEnd/agencia/package.json
+++ b/frontEnd/agencia/package.json
@@ -16,6 +16,7 @@
         "bootstrap": "^4.3.1",
         "chart.js": "2.7.3",
         "core-js": "^2.6.5",
+        "element-ui": "^2.13.2",
         "flag-icon-css": "^3.2.1",
         "font-awesome": "4.7.0",
         "jquery": "3.3.1",
